# tugpgp

./: .gitignore  CHANGELOG.md  Dockerfile.deb  Dockerfile.rpm  LICENSE  README.md  changelog.md  index.html  justfile  main.py  package.json  pnpm-lock.yaml  publiccode.yml  pyproject.toml  requirements.txt
changelog.d/: 20251203_113146_mail_show_yubikey_access.md
images/: in.kushaldas.tugpgp.icns
scripts/: README.md  update_expiry.py
src/: App.vue
src-tauri/: Cargo.toml  QRST7890.pub  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: files.rs  keygen.rs  mod.rs  yubikey.rs
src/components/: DatePicker.vue  PinEntry.vue  SidebarLayout.vue  TButton.vue  WaitSpinner.vue
src/router/: index.js
src/stores/: appStore.js
src/styles/: main.css
src/tugpgp/: Errors.qml  ExpiryPin.qml  Final.qml  PinEntry.qml  Pins.qml  SaveDir.qml  Start.qml  TButton.qml  UpdateExpiry.qml  UpdateSuccess.qml  UploadSucess.qml  UserDetails.qml  WaitGlass.qml  Yubikey.qml  __init__.py  __main__.py  app.py  main.qml  pysidedeploy.spec  tugpgp.pyproject
src/views/: ErrorView.vue  ExpiryPinView.vue  FinalView.vue  GeneratingView.vue  PinsView.vue  SaveDirView.vue  StartView.vue  UpdateExpiryView.vue  UpdateSuccessView.vue  UploadSuccessView.vue  UploadingView.vue  UserDetailsView.vue  YubikeyView.vue
tugpgp/: __init__.py
