[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tugpgp"
authors = [{name = "Kushal Das", email = "mail@kushaldas.in"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version", "description"]
dependencies = [
    "pyside6 >=6.8.1",
    "johnnycanencrypt == 0.15.0",
]

[project.urls]
Home = "https://github.com/SUNET/tugpgp"

[project.scripts]
tugpgp = "tugpgp.app:main"

[tool.briefcase]
project_name = "Tugpgp"
bundle = "in.kushaldas.tugpgp"
version = "0.1.3a2"
url = "https://github.com/SUNET/tugpgp"
license.file = "LICENSE"
author = 'Kushal Das'
author_email = "kushal@sunet.se"

[tool.briefcase.app.tugpgp]
formal_name = "Tugpgp"
description = "OpenPGP key generation and Yubikey upload tool"
icon = "images/in.kushaldas.tugpgp"
sources = ['src/tugpgp']
requires = [
    'pyside6>=6.8.1',
    'johnnycanencrypt>=0.15.0',
]


[tool.briefcase.app.tugpgp.macOS]
requires = [
    'std-nslog~=1.0.0'
]


[tool.briefcase.app.tugpgp.macOS.app]
universal_build = false

[tool.briefcase.app.tugpgp.linux]
requires = []

[tool.briefcase.app.tugpgp.linux.appimage]
system_requires = ["gstreamer1.0-gl", "libasound2", "libegl1", "libfontconfig1", "libgl1", "libnss3", "libpulse0", "libwayland-cursor++0", "libxcb-icccm4", "libxcb-image0", "libxcb-keysyms1", "libxcb-randr0", "libxcb-render-util0", "libxcb-shape0", "libxcomposite1", "libxdamage1", "libxi6",  "libxkbfile1", "libxrandr2", "libxtst6", "libegl-mesa0", "curl"]
dockerfile_extra_content = """
ENV APP_PACKAGES_PATH="/app/appimage/{{ cookiecutter.formal_name }}/{{ cookiecutter.formal_name }}.AppDir/usr/app_packages"
ENV LD_LIBRARY_PATH="$APP_PACKAGES_PATH/shiboken6:$APP_PACKAGES_PATH/PySide6:$APP_PACKAGES_PATH/PySide6/Qt/lib"
"""
linuxdeploy_plugins = []
support_package="Python-3.10-linux-x86_64-support.custom.tar.gz"


[tool.briefcase.app.tugpgp.linux.flatpak]
flatpak_runtime = 'org.kde.Platform'
flatpak_runtime_version = '6.3'
flatpak_sdk = 'org.kde.Sdk'

[tool.briefcase.app.tugpgp.windows]
requires = []

# Mobile deployments
[tool.briefcase.app.tugpgp.iOS]
supported = false

[tool.briefcase.app.tugpgp.android]
supported = false

[tool.briefcase.app.tugpgp.web]
supported = false
