[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tugpgp"
authors = [{name = "Kushal Das", email = "mail@kushaldas.in"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version", "description"]
dependencies = [
    "pyside6 >=6.8.1",
    "johnnycanencrypt == 0.15.0",
]

[project.urls]
Home = "https://github.com/SUNET/tugpgp"

[project.scripts]
tugpgp = "tugpgp.app:main"

[tool.briefcase]
project_name = "Tugpgp"
bundle = "in.kushaldas.tugpgp"
version = "0.1.3a2"
url = "https://github.com/SUNET/tugpgp"
license.file = "LICENSE"
author = 'Kushal Das'
author_email = "kushal@sunet.se"

[tool.briefcase.app.tugpgp]
formal_name = "Tugpgp"
description = "OpenPGP key generation and Yubikey upload tool"
long_description = "OpenPGP key generation and Yubikey upload tool"
icon = "images/in.kushaldas.tugpgp"
sources = ['src/tugpgp']
requires = [
    'pyside6>=6.8.1',
    'johnnycanencrypt>=0.17.0',
]


[tool.briefcase.app.tugpgp.macOS]
requires = [
    'std-nslog~=1.0.0'
]


[tool.briefcase.app.tugpgp.macOS.app]
universal_build = false

[tool.briefcase.app.tugpgp.linux]
requires = [
    "johnnycanencrypt",
    'pyside6>=6.2.4',
    'setuptools',
]

[tool.briefcase.app.tugpgp.linux.system.debian]
system_requires = [
    # Needed to compile pycairo wheel
    "libcairo2-dev",
    # Needed to compile PyGObject wheel
    "libgirepository1.0-dev",
]

system_runtime_requires = [
    # Needed to provide GTK and its GI bindings
    "gir1.2-gtk-3.0",
    "libgirepository-1.0-1",
    # Dependencies that GTK looks for at runtime
    "libcanberra-gtk3-module",
    # Needed to provide WebKit2 at runtime
    # Note: Debian 11 and Ubuntu 20.04 require gir1.2-webkit2-4.0 instead
    # "gir1.2-webkit2-4.1",
    "libxcb-cursor0",
]

style_framework = "Shoelace v2.3"

[tool.scriv]
version = "literal: pyproject.toml: project.version"
format = "md"
