[package]
name = "tugpgp"
version = "0.4.1"
description = "OpenPGP Key Generation and Yubikey Upload Tool"
authors = ["Kushal Das"]
edition = "2021"

[lib]
name = "tugpgp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
wecanencrypt = { version = "0.14.2", features = ["card", "card-pcsc"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
